# electrocardiography

./: Makefile.am  README.md  callbacks.c  callbacks.h  interface.c  main.c  ui.glade
